# DjangoScrapydManager

./: .gitignore  pyproject.toml
django_scrapyd_manager/: admin.py  apps.py  forms.py  guardian.py  models.py  scrapyd_api.py  urls.py  views.py  virtual_model.py
django_scrapyd_manager/static/js/: spider_group_linked.js
server/: manage.py
server/management/commands/: deploy_egg.py
server/server/: settings.py  urls.py
